--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1><a href="search.html">Search Page</a></h1>
+<div style="text-align: center">
+    <h1><a href="search.html">Search Page</a></h1>
+</div>
